[package]
name = "reth-delayed-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-eips.workspace = true
reth-chain-state.workspace = true
reth-primitives-traits.workspace = true
reth-trie-common.workspace = true
alloy-consensus.workspace = true
serde = { workspace = true, features = ["derive"] }

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "serde/std",
]
